# discodb2

./: .dockerignore  .gitignore  README.md  index.html  requirements.txt  run_app.sh
.github/workflows/: ci.yml  pages.yml  release.yml
app/: __init__.py  config.py  main.py
app/adapters/: can_adapter.py
app/application/: can_service.py  dictionary_service.py  serial_service.py
app/domain/: dictionary_store.py  models.py
app/ui/: frame_table.py  main_window.py  utils.py
backend/: README.md  pyproject.toml  requirements.txt
backend/discodb2_backend/: __init__.py  __main__.py  candump_log.py  clock.py  config.py  engine.py  healthlog.py  protocol.py  recorder.py  server.py  stats.py
backend/discodb2_backend/adapters/: __init__.py  base.py  gs_usb.py  replay.py  sim.py  slcan.py  socketcan.py
backend/tests/: test_adapters.py  test_gen_trace.py  test_protocol.py  test_record_replay.py  test_relay.py  test_sim.py  test_stats.py
docs/: CONFORMANCE.md  DESIGN.md  DEVELOPERS.md  USERS.md  WIZARD.md
docs/vw/: README.md  re-playbook.md  sharan.md  vehicle-and-rig.md
frontend/cockpit/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/copilot/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1781107446690-b6cb6238ec8e1.mjs
frontend/shared/: cue-config.ts  (+13 more)
tools/: badge-color-preview.html  carnet-de-chasse-mockup.html  cue-tone-editor.html  cue-tone.js  explore-3col-mockup.html  gen_trace.py
web/: get-started.html  index.html  site.css
(+195 files in other folders)
